Refactoring development branch