@@ -1,27 +1,16 @@
 package com.socialMeli.service;
 
 import com.socialMeli.dto.request.PostDTO;
-import com.socialMeli.dto.response.PublicationDto;
-import com.socialMeli.entity.Post;
-import com.socialMeli.entity.Product;
-import com.socialMeli.exception.InvalidDataException;
 import com.socialMeli.dto.response.PostDto;
 import com.socialMeli.dto.response.PublicationDto;
 import com.socialMeli.entity.Post;
+import com.socialMeli.exception.InvalidDataException;
 import com.socialMeli.exception.NotFoundException;
 import com.socialMeli.repository.IPostRepository;
 import com.socialMeli.repository.IProductRepository;
 import com.socialMeli.repository.IUserRepository;
-import com.socialMeli.repository.IUserRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
-
-import java.time.DateTimeException;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
-import java.util.Locale;
 
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -43,15 +32,13 @@ public class PostService implements IPostService {
         List<Integer> followedVendors = userRepository.findUserByUserId(userId)
                 .orElseThrow(() -> new NotFoundException("No se encontro al usuario"))
                 .getFollowedId();
+
         List<Post> latestPost = new ArrayList<>();
         for (Integer vendorId : followedVendors) {
             Optional<List<Post>> filteredPostOfOneUser = postRepository.getPostFromTheLastTwoWeeksByUserId(vendorId);
-
             filteredPostOfOneUser.ifPresent(latestPost::addAll);
         }
-
         List<PostDto> sortedPost = addRecoverProductsOnPosts(latestPost);
-
         return new PublicationDto(userId, sortPostsByDate(sortedPost));
     }
 
@@ -59,8 +46,7 @@ public class PostService implements IPostService {
         List<PostDto> postDtoList = new ArrayList<>();
         for (Post post : postList) {
             PostDto postDto = convertPostToDto(post);
-            Product product = productRepository.getProductById(post.getProductId()).get();
-            postDto.setProduct(productRepository.getProductById(post.getProductId()).orElseThrow());
+            postDto.setProduct(productRepository.getProductById(post.getProductId()).orElseThrow(() -> new NotFoundException("No se encontro el producto")));
             postDtoList.add(postDto);
         }
         return postDtoList;
@@ -69,6 +55,7 @@ public class PostService implements IPostService {
     @Override
     public void addPost(PostDTO postDto) {
         validatePost(postDto);
+        //TODO add constructor with object instead of data passing
         Post finalPost = new Post(idCounter.incrementAndGet(), postDto.getDate(), postDto.getProduct().getId(), postDto.getCategory(), postDto.getPrice(), postDto.getUser_id());
         productRepository.add(postDto.getProduct());
         postRepository.add(finalPost);
@@ -78,10 +65,13 @@ public class PostService implements IPostService {
         if (post.getUser_id() <= 0) {
             throw new InvalidDataException("Error al enviar los datos: Usuario no valido");
         }
-        if (post.getDate() == null) {
+        if (post.getDate() == null) {//Preguntar
             throw new InvalidDataException("Error al enviar los datos: La fecha no puede ser nula");
         }
-        if (post.getProduct() == null || post.getProduct().getId() <= 0 || post.getProduct().getName() == null || post.getProduct().getName().isEmpty()) {
+        if (post.getProduct() == null
+                || post.getProduct().getId() <= 0
+                || post.getProduct().getName() == null
+                || post.getProduct().getName().isEmpty()) {
             throw new InvalidDataException("Error al enviar los datos: Producto no válido");
         }
         if (post.getCategory() <= 0) {
@@ -95,12 +85,12 @@ public class PostService implements IPostService {
     public List<PostDto> sortPostsByDate(List<PostDto> posts) {
         return posts.stream()
                 .sorted(Comparator.comparing(PostDto::getDate).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public PostDto convertPostToDto(Post post) {
         PostDto convertedPost = new PostDto();
-        convertedPost.setUser_id(post.getUserId());
+        convertedPost.setUserId(post.getUserId());
         convertedPost.setId(post.getId());
         convertedPost.setProduct(productRepository
                 .getProductById(post.getProductId())
